Added new javascript file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>'Hello World'</title>
     </head>
     <body>
-        <script>
-            // Java script is always included inside script tags
-            //Show alert pop-up on website
-            alert('Hello world');
-        </script>
+        <!---Java script is always included inside script tags
+             Different file created where all java scripts are written
+             This file is linked below-->
+
+        <script src="helloalert.js"></script>
     </body>
 </html>
